# MTMchkin

./: CMakeLists.txt  Exception.h  Mtmchkin.cpp  README.md  main.cpp
Cards/: Barfight.cpp  Barfight.h  BattleCard.cpp  BattleCard.h  Card.cpp  Card.h  Dragon.cpp  Dragon.h  Gang.cpp  Gang.h  Gremlin.cpp  Gremlin.h  Mana.cpp  Mana.h  Merchant.cpp  Merchant.h  Treasure.cpp  Treasure.h  Well.cpp  Well.h  Witch.cpp  Witch.h
Players/: Healer.cpp  Healer.h  Ninja.cpp  Ninja.h  Player.cpp  Player.h  Warrior.cpp  Warrior.h
fileTests/: tester.sh  testsMain.cpp
fileTests/inFiles/: test0.deck  test0.in  test1.deck  test1.in  test10.deck  test10.in  test100.deck  test100.in  test1000.deck  test1000.in  test1001.deck  test1001.in  test1002.in  test1003.in  test1004.in  test1005.deck  test1005.in  test1006.deck  test1006.in  test1007.in  test1008.deck  test1008.in  test1009.deck  test1009.in  test101.in  test1011.deck  test1011.in  test1012.deck  test1012.in  test1014.in  test1015.deck  test1015.in  test1016.in  test1018.deck  test1018.in  test1019.deck  test1019.in  test102.deck  test102.in  test1020.deck  (+1635 more)
